syntax="proto3";
/// This file contains some standard "types" for messages to/from BESS

package bess.pb;

/// The Field message represents one field in a packet -- either stored in metadata or in the packet body.
message Field {
  oneof position {
    string attr_name = 1; /// The metadata attribute assigned to store the data
    uint32 offset = 2; /// The offset in bytes to store the data into
  }
  uint32 num_bytes = 3; /// The size of the data in bytes
}

/// The FieldData message encodes a value to insert into a packet; the value can be supplied as either an int or a bytestring.
message FieldData {
  oneof encoding {
    bytes value_bin = 1; /// The value as a bytestring
    uint64 value_int = 2; /// The value in integer format
  }
}

